fix: replace Map.of with Collections.singletonMap for Java 8 compatibility